<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ticker</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <!-- new submast page -->
    <string name="new_event_name_hint">事件名称</string>
    <string name="new_note_hint">简要注释或点击＋关联便签</string>
    <string name="icon_selection_often">常用</string>
    <string name="icon_selection_important">重要级</string>
    <string name="icon_selection_study">学习</string>
    <string name="icon_selection_work">工作</string>
    <string name="icon_selection_lesure">休闲</string>
    <string name="icon_selection_freatured">自定义</string>
    <string name="new_event_contact_hint">联系人</string>
    <string name="new_event_extra_hint">属性</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="now_date_sample">7月28日 星期三</string>
    <string name="new_time_sample">00:00</string>
    <string name="now_task_name_defualt">当前没有任务进行</string>
    <string name="now_next_task_name_defualt">接下去没有任务了</string>

    <!-- submast content page -->
    <string name="task_name">重构博客模板</string>
    <string name="folder_name">二次元</string>
    <string name="task_time">12:30－15:00</string>
    <string name="remind">提前10分钟提醒</string>
    <string name="members">EVA参与</string>
    <string name="attention">本次模板的注意事项 ></string>
    <string name="new_subtask">新子任务</string>
    <string name="unfinished_subtask_list">重写打印样式表</string>
    <string name="finished_subtask_list">修复手机版边框</string>
    <string name="jump">跳转</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>

    <!-- main page -->
    <string name="tab_time">时间</string>
    <string name="tab_file">文件</string>
    <string name="tab_add">添加</string>

    <!-- folder page -->
    <string name="taskCount">4</string>
    <string name="taskSign">找不到自己喜欢的伞，那就淋雨吧！</string>
    <string name="taskName">天地一蜉蝣</string>
    <string name="folderName">二次元</string>
    <string name="tpye_in_folder_name">请输入文件夹名</string>

    <!--  -->
    <string name="sampleFolder">待办事项</string>
    <string name="sampleFolder2">二次元</string>
    <string name="sampleFolder3">如果这个文件夹名字非常长会怎么样呢</string>
    <string name="note_list_sample_date">2014-8-23</string>
    <string name="note_sample_time">2014-8-23 23:55</string>
    <string name="note_sample">我就是想随便打一点东西进来看看这个东西现在的效果而已，其实我也不知道应该打什么进来</string>
    <string name="note_new">新建</string>
    <string name="note_delete">删除</string>
    <string name="note_finish">完成</string>
    <string name="new_evnet_start_time">开始时间</string>
    <string name="new_event_start_date">进行日期</string>

</resources>