<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_jump"
        android:orderInCategory="1"
        android:icon="@drawable/sample_icon"
        android:showAsAction="always"
        android:title="@string/jump"/>
    <item
        android:id="@+id/action_modify"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:icon="@drawable/sample_icon"
        android:title="@string/modify"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:icon="@drawable/sample_icon"
        android:title="@string/delete"/>
    <item
        android:id="@+id/action_determine"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:icon="@drawable/sample_icon"
        android:title="@string/confirm"/>
</menu>
