<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" 
     android:layout_width="match_parent" 
     android:layout_height="wrap_content"
     android:background="@color/white" 
     android:orientation="vertical">
    <LinearLayout 
        android:background="@color/blue" 
        android:orientation="horizontal" 
        style="@style/normal_line">
        <ImageView 
            style="@style/padding_pic" 
            android:src="@drawable/sample_icon"/>
        <TextView 
            android:layout_width="wrap_content" 
            style="@style/padding_pic_big" 
            android:id="@+id/task_name" 
            android:text="@string/task_name" 
            android:textColor="@color/white" 
            android:singleLine="true" 
            android:ellipsize="end" 
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout 
        android:background="@color/gray" 
        android:orientation="horizontal" 
        style="@style/normal_line">
        <ImageView 
            style="@style/padding_pic" 
            android:src="@drawable/sample_icon"/>
        <TextView 
            android:layout_width="wrap_content" 
            style="@style/padding_pic_big" 
            android:id="@+id/folder_name" 
            android:text="@string/folder_name" 
            android:textColor="@color/black" 
            android:singleLine="true" 
            android:ellipsize="end" 
            android:gravity="center"/>
        <ImageView 
            style="@style/padding_pic" 
            android:src="@drawable/sample_icon"/>
        <TextView 
            android:layout_width="wrap_content" 
            style="@style/padding_pic_big" 
            android:id="@+id/task_time" 
            android:text="@string/task_time" 
            android:textColor="@color/black" 
            android:singleLine="true" 
            android:ellipsize="end" 
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout 
        android:background="@color/gray" 
        android:orientation="horizontal" 
        style="@style/normal_line">
        <ImageView 
            style="@style/padding_pic" 
            android:src="@drawable/sample_icon"/>
        <TextView 
            android:layout_width="wrap_content" 
            style="@style/padding_pic_big" 
            android:id="@+id/remind" 
            android:text="@string/remind" 
            android:textColor="@color/black"
            android:singleLine="true" 
            android:ellipsize="end" 
            android:gravity="center"/>
        <ImageView 
            style="@style/padding_pic" 
            android:src="@drawable/sample_icon"/>
        <TextView 
            android:layout_width="wrap_content" 
            style="@style/padding_pic_big" 
            android:id="@+id/members" 
            android:text="@string/members" 
            android:textColor="@color/black"
            android:singleLine="true" 
            android:ellipsize="end" 
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout 
        android:background="@color/gray" 
        android:orientation="horizontal" 
        style="@style/normal_line">
        <ImageView 
            style="@style/padding_pic" 
            android:src="@drawable/sample_icon"/>
            <Button 
                android:layout_width="match_parent" 
                android:layout_height="48dp" 
                android:background="@color/gray" 
                android:id="@+id/attention" 
                android:text="@string/attention" 
                android:textColor="@color/black" 
                android:gravity="center|left" 
                android:paddingTop="4dp" 
                android:paddingBottom="4dp" 
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent" 
            android:layout_height="10dp" 
            android:background="@drawable/gradient_shape" 
            android:orientation="vertical"> </LinearLayout>

        <ListView
            android:id="@+id/event_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:divider="@null" >
        </ListView>

        <LinearLayout 
            android:background="@color/white" 
            android:orientation="horizontal" 
            style="@style/normal_line">
            <ImageView 
                style="@style/padding_pic" 
                android:src="@drawable/sample_icon"/>
            <Button 
                android:layout_width="match_parent" 
                android:layout_height="48dp" 
                android:background="@color/gray" 
                android:id="@+id/new_subevent" 
                android:text="@string/new_subtask" 
                android:textColor="@color/black" 
                android:gravity="center|left" 
                android:paddingTop="4dp" 
                android:paddingBottom="4dp" 
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>
</LinearLayout>